tests/requests/invalid/003.http
-blargh /foo HTTP/1.1\r\n
\r\n